2013-02-18  Zan Dobersek  <zdobersek@igalia.com>

        Unreviewed GTK gardening.

        * Scripts/run-gtk-tests:
        (TestRunner): Skipped the ReloadPageAfterCrash unit test as it is flakily timing out.

2013-02-18  Adenilson Cavalcanti  <cavalcantii@gmail.com>

        [Qt][WK2] Remove duped test name and append new test in project file
        https://bugs.webkit.org/show_bug.cgi?id=110117

        A new WK2 API test has landed recently (ResizeWindowAfterCrash), this patch will
        add this test into the runnable test suite and remove a duped test in project file.

        Reviewed by Jocelyn Turcotte.

        * TestWebKitAPI/Tests/WebKit2/WebKit2.pro:

2013-02-18  Jochen Eisinger  <jochen@chromium.org>

        [chromium] remove log spew from dumpAllBackForwardLists
        https://bugs.webkit.org/show_bug.cgi?id=110108

        Reviewed by Nico Weber.

        * DumpRenderTree/chromium/TestRunner/src/WebTestProxy.cpp:

2013-02-18  Christophe Dumez  <ch.dumez@sisa.samsung.com>

        [EFL][WK2] Disable failing API tests
        https://bugs.webkit.org/show_bug.cgi?id=110081

        Reviewed by Kenneth Rohde Christiansen.

        Disable DOMWindowExtensionBasic WK2 test on EFL port as it times out.

        * TestWebKitAPI/PlatformEfl.cmake:

2013-02-18  Simon Hausmann  <simon.hausmann@digia.com>

        [Qt] Disable the build if certain configure checks fail
        https://bugs.webkit.org/show_bug.cgi?id=110094

        Reviewed by Tor Arne Vestbø.

        Allow for the build to be skipped (clear out SUBDIRS) if certain
        configure conditions aren't met.

        * qmake/mkspecs/features/configure.prf:

2013-02-15  Allan Sandfeld Jensen  <allan.jensen@digia.com>

        [Qt][WK2] Support WK2 API tests
        https://bugs.webkit.org/show_bug.cgi?id=109843

        Reviewed by Jocelyn Turcotte.

        * TestWebKitAPI/DerivedSources.pri: Added.
        * TestWebKitAPI/InjectedBundle.pri: Added.